made graphics silky smooth